--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -17,6 +17,7 @@
           <li><a href="pricing.html">Rutas</a></li>
           <li class="dropdown"><a href="#"><span>Órdenes</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
+              <li><a href="{% url "core:order-list" %}">Listar Órden</a></li>
               <li><a href="{% url "core:order-create" %}">Crear Órden</a></li>
               <li><a href="#">Procesar Órden</a></li>
             </ul>
