--- a/templates/orders/list.html
+++ b/templates/orders/list.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-{% comment %} <style>
+  {% comment %} <style>
     .order-card {
         background-color: #0056b3; /* Color azul */
         color: white;
@@ -49,9 +49,7 @@
         border-color: #0056b3;
     }
 </style> {% endcomment %}
-
-<main id="main">
-
+  <main id="main">
     <!-- ======= Breadcrumbs ======= -->
     <div class="breadcrumbs">
       <div class="page-header d-flex align-items-center" style="background-image: url('assets/img/page-header.jpg');">
@@ -67,45 +65,50 @@
       <nav>
         <div class="container">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li>
+              <a href="index.html">Home</a>
+            </li>
             <li>Pricing</li>
           </ol>
         </div>
       </nav>
-    </div><!-- End Breadcrumbs -->
+    </div>
+    <!-- End Breadcrumbs -->
 
     <!-- ======= Pricing Section ======= -->
     <section id="pricing" class="pricing">
       <div class="container" data-aos="fade-up">
-
         <div class="row gy-4">
-          <div class="col-lg-7">
-              <h3> {{ model }}</h3> 
-              <div class="row">
-                {% for order in orders %}
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="order-card" data-aos="fade-up" data-aos-delay="200">
-                        <h3>Orden #{{ order.id }}</h3>
-                        <h4>{{ order.commodity }}<span> - ${{ order.value }}</span></h4>
-                        <ul>
-                            <li><i class="bi bi-check-circle-fill"></i> Origen: {{ order.ship_from }}</li>
-                            <li><i class="bi bi-check-circle-fill"></i> Destino: {{ order.ship_to }}</li>
-                            <li><i class="bi bi-check-circle-fill"></i> Volumen: {{ order.volume }}</li>
-                            <li><i class="bi bi-check-circle-fill"></i> Fecha: {{ order.date }}</li>
-                            <li><i class="bi bi-check-circle-fill"></i> Estado: {{ order.get_status_display }}</li>
-                        </ul>
-                        <a href="{% url 'core:order-update' order.id %}" class="buy-btn">Editar</a>
-                        <a href="{% url 'core:order-delete' order.id %}" class="buy-btn">Eliminar</a>
-                        <a href="{% url 'core:order-optimize' order.id %}" class="buy-btn">Optimizar Ruta</a>
-                    </div>
-                </div>
-                {% endfor %}
+          {% for order in orders %}
+            <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+              <div class="pricing-item">
+                <h3>Orden #{{ order.id }}</h3>
+                <h4><sup>$</sup>{{ order.value }}<span> / {{ order.commodity }}</span></h4>
+                <ul>
+                  <li>
+                    <i class="bi bi-arrow-right"></i> Origen: {{ order.ship_from }}
+                  </li>
+                  <li>
+                    <i class="bi bi-arrow-right"></i> Destino: {{ order.ship_to }}
+                  </li>
+                  <li>
+                    <i class="bi bi-arrow-right"></i> Volumen: {{ order.volume }}
+                  </li>
+                  <li>
+                    <i class="bi bi-arrow-right"></i> Fecha: {{ order.date }}
+                  </li>
+                </ul>
+                <a href="{% url 'core:order-update' order.id %}" class="btn btn-outline-warning m-1">Editar</a>
+                <a href="{% url 'core:order-delete' order.id %}" class="btn btn-outline-danger m-1">Eliminar</a>
+                <a href="{% url 'core:order-optimize' order.id %}" class="btn btn-outline-success m-1">Optimizar Ruta</a>
+              </div>
             </div>
+            <!-- End Pricing Item -->
+          {% endfor %}
         </div>
-          </div><!-- End Quote Form -->
-        </div>
-    </section><!-- End Horizontal Pricing Section -->
-
-  </main><!-- End #main -->
-  
-{% endblock content %}
+      </div>
+    </section>
+    <!-- End Pricing Section -->
+  </main>
+  <!-- End #main -->
+{% endblock %}
