--- a/static/css/main.css
+++ b/static/css/main.css
@@ -902,6 +902,17 @@ section {
   border-radius: 5px;
 }
 
+/* -------------------------------------------------------------------route */
+.route-listing .route-item {
+  padding: 60px 40px;
+  box-shadow: 0 3px 20px -2px rgba(108, 117, 125, 0.15);
+  background: #fff;
+  
+  border-top: 4px solid #fff;
+  border-radius: 5px;
+
+}
+
 .pricing h3 {
   font-weight: 600;
   margin-bottom: 15px;
