--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -14,12 +14,19 @@
           <li><a href="{% url 'core:home' %}" class="active">Inicio</a></li>
           <li><a href="{% url 'core:about' %}">Acerca de</a></li>
           <li><a href="services.html">Servicios</a></li>
-          <li><a href="pricing.html">Rutas</a></li>
+          
           <li class="dropdown"><a href="#"><span>Órdenes</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="{% url "core:order-list" %}">Listar Órden</a></li>
               <li><a href="{% url "core:order-create" %}">Crear Órden</a></li>
               <li><a href="#">Procesar Órden</a></li>
+            </ul>
+          </li>
+          <li class="dropdown"><a href="#"><span>Rutas</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+            <ul>
+              <li><a href="{% url "core:route-list" %}">Listar Ruta</a></li>
+              <li><a href="{% url "core:order-create" %}">Crear Ruta</a></li>
+             
             </ul>
           </li>
           <li><a href="contact.html">Contacto</a></li>
