--- a/templates/orders/list.html
+++ b/templates/orders/list.html
@@ -88,6 +88,12 @@
                   <li>
                     <i class="bi bi-arrow-right"></i> Fecha: {{ order.date }}
                   </li>
+                  <li>
+                    <i class="bi bi-arrow-right"></i> Fecha de entrega requerida: {{ order.required_delivery_date }}
+                  </li>
+                  <li>
+                    <i class="bi bi-arrow-right"></i> Porcentaje de impuesto: {{ order.tax_percentage }}
+                  </li>
                 </ul>
                 <a href="{% url 'core:order-update' order.id %}" class="btn btn-outline-warning m-1">Editar</a>
                 <a href="{% url 'core:order-delete' order.id %}" class="btn btn-outline-danger m-1">Eliminar</a>
@@ -95,24 +101,18 @@
                 
                 {% if order.optimized %}
                 <!-- Rutas optimizadas -->
-                <div class="">
-                  <!-- Contenido del cuadro adicional -->
-                  <h5 class="mt-3">Rutas óptimas</h5>
+                <div class="optimized-routes-container">
+                  <h5 class="mt-3">Ruta óptima</h5>
                   <ul>
                     {% for r in order.optimized.to_list %}
                     <li>
-                      <i class="bi bi-arrow-right"></i>{{r.id }}
-                      <i class="{{r.icon}}"></i>
+                      <i class="{{ r.icon }}">  -{{r.id}}</i> Fecha: {{ r.date }} <br> Desde: {{ r.origin }} <br> Hasta: {{ r.destination }}
                     </li>
-                    {% comment %} (1)Date: 2018-02-01  From: Singapore Warehouse  To: Malaysia Warehouse  By: Truck
-(2)Date: 2018-02-02  From: Malaysia Warehouse  To: Malaysia Port  By: Truck
-(3)Date: 2018-02-03  From: Malaysia Port  To: Shanghai Port  By: Sea
-(4)Date: 2018-02-10  From: Shanghai Port  To: Shanghai Warehouse  By: Truck
-(5)Date: 2018-02-11  From: Shanghai Warehouse  To: Wuxi Warehouse  By: Truck {% endcomment %}
                     {% endfor %}
                   </ul>
-              </div>
+                </div>{{r.id}}
               {% endif %}
+              
               </div>
             </div>
             <!-- End Pricing Item -->
