--- a/templates/orders/list.html
+++ b/templates/orders/list.html
@@ -83,7 +83,7 @@
                     <i class="bi bi-arrow-right"></i> Destino: {{ order.ship_to }}
                   </li>
                   <li>
-                    <i class="bi bi-arrow-right"></i> Volumen: {{ order.volume }}
+                    <i class="bi bi-arrow-right"></i> Volumen: {{ order.volume }} m³
                   </li>
                   <li>
                     <i class="bi bi-arrow-right"></i> Fecha: {{ order.date }}
@@ -100,18 +100,25 @@
                 <a href="{% url 'core:order-optimize' order.id %}" class="btn btn-outline-success btn-optimized m-1">Optimizar Ruta</a>
                 
                 {% if order.optimized %}
-                <!-- Rutas optimizadas -->
-                <div class="optimized-routes-container">
-                  <h5 class="mt-3">Ruta óptima</h5>
-                  <ul>
-                    {% for r in order.optimized.to_list %}
-                    <li>
-                      <i class="{{ r.icon }}">  -{{r.id}}</i> Fecha: {{ r.date }} <br> Desde: {{ r.origin }} <br> Hasta: {{ r.destination }}
-                    </li>
-                    {% endfor %}
-                  </ul>
-                </div>{{r.id}}
-              {% endif %}
+                {% if order.solved %}
+                  <!-- Rutas optimizadas -->
+                  <div class="optimized-routes-container">
+                    <h5 class="mt-3">Ruta óptima</h5>
+                    <ul>
+                      {% for r in order.optimized.to_list %}
+                      <li>
+                        <i class="{{ r.icon }}"></i> - {{ r.id }} Fecha: {{ r.date }} <br> Desde: {{ r.origin }} <br> Hasta: {{ r.destination }}
+                      </li>
+                      {% endfor %}
+                    </ul>
+                  </div>
+                {% else %}
+                  <div class="alert alert-danger" role="alert">
+                    {{ order.optimized.routes }}
+                  </div>
+                {% endif %}
+            {% endif %}
+            
               
               </div>
             </div>
