--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -24,7 +24,7 @@
              
             </ul>
           </li>
-          <li><a class="get-a-quote" href="get-a-quote.html">Iniciar Sesión</a></li>
+          {% comment %} <li><a class="get-a-quote" href="get-a-quote.html">Iniciar Sesión</a></li> {% endcomment %}
         </ul>
      </nav><!-- .navbar -->
     </div>
