--- a/templates/orders/list.html
+++ b/templates/orders/list.html
@@ -112,7 +112,7 @@
                     </ul>
                   </div>
                 {% elif not order.optimized.solved %}
-                  <div class="alert alert-danger" role="alert">
+                  <div class="alert alert-danger mt-4" role="alert">
                     {{ order.optimized.routes }}
                   </div>
             {% endif %}
