--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -20,7 +20,7 @@
           <li class="dropdown"><a href="#"><span>Rutas</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="{% url "core:route-list" %}">Listar Ruta</a></li>
-              <li><a href="{% url "core:order-create" %}">Crear Ruta</a></li>
+              <li><a href="{% url "core:route-create" %}">Crear Ruta</a></li>
              
             </ul>
           </li>
