--- a/templates/generic/create.html
+++ b/templates/generic/create.html
@@ -38,8 +38,7 @@
             <form method="post" class="php-email-form">
               {% csrf_token %}
               <h3>Crear {{ model }}</h3>
-              <p>Vel nobis odio laboriosam et hic voluptatem. Inventore vitae totam. Rerum repellendus enim linead sero park flows.</p>
-              <div class="row gy-4">
+              <div class="row gy-4 mt-3">
                 {% for field in form %}
                 <div class="col-md-12">
                     {{ field }}
