--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -8,7 +8,7 @@
           <a href="index.html" class="logo d-flex align-items-center">
             <span>UCI</span>
           </a>
-          <p>Universidad de las Ciencias Informaticas.</p>
+          <p>Universidad de las Ciencias Informáticas.</p>
           <div class="social-links d-flex mt-4">
             <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
             <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
@@ -17,10 +17,10 @@
           </div>
         </div>
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
-          <h4>Contact Us</h4>
+          <h4>Contáctame</h4>
           <p>
-            <strong>Phone:</strong> +1 5589 55488 55<br>
-            <strong>Email:</strong> info@example.com<br>
+            <strong>Teléfono:</strong>+53 55581230<br>
+            <strong>Correo:</strong> melisasr@estudiantes.uci.cu<br>
           </p>
 
         </div>
@@ -33,7 +33,7 @@
         &copy; Copyright <strong><span>UCI</span></strong>. Reservados todos los derechos
       </div>
       <div class="credits">
-        Realizado por <a href="https://bootstrapmade.com/">Melissa</a>
+        Realizado por <a href="#">MeliSao</a>
       </div>
     </div>
   </footer>
