--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -21,7 +21,7 @@
             <div class="col-lg-3 col-6">
               <div class="stats-item text-center w-100 h-100">
                 <span data-purecounter-start="0" data-purecounter-end="{{ users_count }}" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Clientes</p>
+                <p>Órdenes</p>
               </div>
             </div><!-- End Stats Item -->
 
@@ -143,17 +143,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src={% static "img/testimonials/testimonials-1.jpg"%} class="testimonial-img" alt="">
-                <h3>Ing. Vladmir Milián Núñez</h3>
-                <h4>Tutor</h4>
-                
-               
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src={% static "img/testimonials/testimonials-2.jpg"%} class="testimonial-img" alt="">
+                <img src={% static "img/testimonials/testimonials-3.jpg"%} class="testimonial-img" alt="">
                 <h3>Melisa Sao Rodríguez
                 </h3>
                 <h4>Autora</h4>
@@ -163,7 +153,17 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src={% static "img/testimonials/testimonials-3.jpg"%} class="testimonial-img" alt="">
+                <img src={% static "img/testimonials/testimonials-5.jpg"%} class="testimonial-img" alt="">
+                <h3>Ing. Vladmir Milián Núñez</h3>
+                <h4>Tutor</h4>
+                
+               
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src={% static "img/testimonials/testimonials-1.jpg"%} class="testimonial-img" alt="">
                 <h3>Dr.C. Héctor Raúl Gonzáles Diez</h3>
                 <h4>Tutor</h4>
                
