--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-    {% block title %}Title{% endblock title %}
+    {% block title %}Multi-modal Trasnportation{% endblock title %}
     </title>
     <!-- Bootstrap 5 CSS -->
     <link href="{% static 'css/libraries/bootstrap.min.css' %}" rel="stylesheet"/>
