--- a/templates/generic/update.html
+++ b/templates/generic/update.html
@@ -11,7 +11,7 @@
           <div class="row d-flex justify-content-center">
             <div class="col-lg-6 text-center">
               <h2>Crear {{ model }}</h2>
-              <p>Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+              <p data-aos="fade-up" data-aos-delay="100">Un proyecto sobre el uso de programación matemática para resolver la minimización de costos de transporte multimodal en la entrega de mercancías y la gestión de la cadena de suministro.</p>
             </div>
           </div>
         </div>
