--- a/templates/orders/list.html
+++ b/templates/orders/list.html
@@ -2,53 +2,6 @@
 {% load static %}
 
 {% block content %}
-  {% comment %} <style>
-    .order-card {
-        background-color: #0056b3; /* Color azul */
-        color: white;
-        border-radius: 10px;
-        padding: 20px;
-        margin-bottom: 25px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        transition: transform 0.3s ease-in-out;
-    }
-    .order-card:hover {
-        transform: scale(1.03);
-    }
-    .order-card h3 {
-        font-size: 1.5em;
-    }
-    .order-card h4 {
-        font-size: 1.2em;
-        margin-bottom: 15px;
-    }
-    .order-card ul {
-        list-style: none;
-        padding: 0;
-    }
-    .order-card ul li {
-        margin-bottom: 10px;
-        display: flex;
-        align-items: center;
-    }
-    .order-card ul li i {
-        margin-right: 10px;
-    }
-    .order-card .buy-btn {
-        background-color: white;
-        color: #0056b3;
-        text-decoration: none;
-        padding: 10px 20px;
-        border-radius: 20px;
-        border: 2px solid white;
-        transition: background-color 0.3s, color 0.3s;
-    }
-    .order-card .buy-btn:hover {
-        background-color: #0056b3;
-        color: white;
-        border-color: #0056b3;
-    }
-</style> {% endcomment %}
   <main id="main">
     <!-- ======= Breadcrumbs ======= -->
     <div class="breadcrumbs">
@@ -101,12 +54,13 @@
                 
                 {% if order.optimized and order.optimized.solved %}
                   <!-- Rutas optimizadas -->
-                  <div class="optimized-routes-container">
-                    <h5 class="mt-3">Ruta óptima</h5>
+                  <div class="">
+                    <h3 class="mt-5">Ruta óptima:</h3>
                     <ul>
                       {% for r in order.optimized.to_list %}
                       <li>
-                        <i class="{{ r.icon }}">{{ r.id }}</i>  Fecha: {{ r.date }} <br> Desde: {{ r.origin }} <br> Hasta: {{ r.destination }}
+                        <h5 class="mx-2 text-secondary"><strong>({{ r.id }})</strong><h5>
+                        <i class="{{ r.icon }}"></i>  Fecha: {{ r.date }} <br> Desde: {{ r.origin }} <br> Hasta: {{ r.destination }}
                       </li>
                       {% endfor %}
                     </ul>
