--- a/templates/generic/create.html
+++ b/templates/generic/create.html
@@ -41,6 +41,7 @@
               <div class="row gy-4 mt-3">
                 {% for field in form %}
                 <div class="col-md-12">
+                  <div class="mx-2 text-secondary">{{ field.label_tag }}</div>
                     {{ field }}
                     {% if field.errors %}
                         <div class="invalid-feedback">
