--- a/templates/routes/list.html
+++ b/templates/routes/list.html
@@ -9,7 +9,10 @@
         <div class="container position-relative">
           <div class="row d-flex justify-content-center">
             <div class="col-lg-6 text-center">
-              <h2>Listado de Rutas</h2>
+              <h2>Listado de {{model}}</h2>
+              {% if result %}
+                <h3 class="text-light">{{result}}</h3>
+              {% endif %}
             </div>
           </div>
         </div>
