--- a/templates/routes/list.html
+++ b/templates/routes/list.html
@@ -31,7 +31,7 @@
                   <h5>Destino:</h5> 
                   <h6>{{ route.destination }}</h6> 
                   <h4>
-                    <sup></sup><h5>Precio: ${{ route.fixed_freight_cost }}</h5> <br>
+                    <sup></sup><h5>Costo: ${{ route.fixed_freight_cost }}</h5> <br>
                     <span><h5>Tipo de transporte:</h5> <h6>{{ route.get_travel_mode_display }}</h6></span>
                   </h4>
                   <div class="py-3">
