--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -182,4 +182,6 @@
 
   </main><!-- End #main -->
 {% endblock content %}
-
+{% block javascript %}
+  <script src="{% static 'js/form.js' %}"></script>
+{% endblock javascript %}
