--- a/templates/orders/list.html
+++ b/templates/orders/list.html
@@ -9,7 +9,7 @@
         <div class="container position-relative">
           <div class="row d-flex justify-content-center">
             <div class="col-lg-6 text-center">
-              <h2>Listado de Ordenes</h2>
+              <h2>Listado de Órdenes</h2>
               
             </div>
           </div>
@@ -34,9 +34,6 @@
                   </li>
                   <li>
                     <i class="bi bi-arrow-right"></i> Destino: {{ order.ship_to }}
-                  </li>
-                  <li>
-                    <i class="bi bi-arrow-right"></i> Volumen: {{ order.volume }} m³
                   </li>
                   <li>
                     <i class="bi bi-arrow-right"></i> Fecha: {{ order.date }}
