--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -13,8 +13,8 @@
           <li><a href="{% url 'core:home' %}" class="active">Inicio</a></li>
           <li class="dropdown"><a href="#"><span>Órdenes</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="{% url "core:order-list" %}">Listar Órden</a></li>
-              <li><a href="{% url "core:order-create" %}">Crear Órden</a></li>
+              <li><a href="{% url "core:order-list" %}">Listar Orden</a></li>
+              <li><a href="{% url "core:order-create" %}">Crear Orden</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="#"><span>Rutas</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
